--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-loader": "^3.0.3",
     "eslint-plugin-react": "^7.17.0",
     "file-loader": "^5.0.2",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
