styled components 제거

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
         "semi": [
             2,
             "always"
-        ]
+        ],
+        "react/no-unescaped-entities": 0
     },
     "settings": {
         "react": {
