--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,13 @@
     ],
     "@babel/react",
     "@babel/typescript"
-  ]
+  ],
+  "env": {
+    "production": {
+      "plugins": ["emotion"]
+    },
+    "development": {
+      "plugins": [["emotion", {"sourceMap": true}]]
+    }
+  }
 }
