--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
-    "@types/styled-components": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-emotion": "^10.0.23",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.3.2",
     "eslint": "^6.7.2",
     "eslint-loader": "^3.0.3",
+    "eslint-plugin-emotion": "^10.0.14",
     "eslint-plugin-react": "^7.17.0",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
@@ -34,7 +35,6 @@
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
-    "styled-components": "^4.4.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
     "url-loader": "^3.0.0",
@@ -45,6 +45,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "react": "^16.12.0",
