--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-emotion": "^10.0.14",
     "eslint-plugin-react": "^7.17.0",
     "file-loader": "^5.0.2",
+    "fork-ts-checker-webpack-plugin": "^4.0.0-beta.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
