--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,24 @@
 {
   "presets": [
-    [
-      "@babel/preset-env",
-      { "targets": { "browsers": ["last 2 versions", ">= 5% in KR"] } }
-    ],
-    "@babel/react",
-    "@babel/typescript"
+      [
+          "@babel/preset-env",
+          { "targets": { "browsers": ["last 2 versions", ">= 5% in KR"] } }
+      ],
+      "@babel/react",
+      "@babel/typescript"
   ],
   "env": {
-    "production": {
-      "plugins": ["emotion"]
-    },
-    "development": {
-      "plugins": [["emotion", {"sourceMap": true}]]
-    }
+      "production": {
+          "plugins": ["emotion"]
+      },
+      "development": {
+          "plugins": [
+              [
+                  "emotion", {
+                      "sourceMap": true
+                  }
+              ]
+          ]
+      }
   }
 }
