--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:@typescript-eslint/eslint-recommended"
+        "plugin:@typescript-eslint/eslint-recommended",
+        "prettier"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -32,7 +33,8 @@
             "always"
         ],
         "react/no-unescaped-entities": 0,
-        "emotion/jsx-import": "error"
+        "emotion/jsx-import": "error",
+        "no-unused-vars": 0
     },
     "settings": {
         "react": {
