--- a/package.json
+++ b/package.json
@@ -4,53 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./config/webpack.dev",
-    "build": "webpack --config ./config/webpack.prod",
-    "analyze": "webpack --config ./config/webpack.bundleanalyzer",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:local": "webpack-dev-server --config ./config/webpack.common",
+    "build": "webpack --config ./config/webpack.common",
+    "analyze": "webpack --config ./config/webpack.common",
+    "db": "json-server db.json --watch"
   },
   "keywords": [],
-  "author": "",
+  "author": "keen",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.4",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.23",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.3.2",
-    "eslint": "^6.7.2",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-emotion": "^10.0.14",
-    "eslint-plugin-react": "^7.17.0",
-    "file-loader": "^5.0.2",
-    "fork-ts-checker-webpack-plugin": "^4.0.0-beta.4",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.1",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.3",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.3",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    
   },
   "dependencies": {
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+   
   }
 }
