--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --config ./config/webpack.dev",
     "build": "webpack --config ./config/webpack.prod",
-    "analyze": "webpack --config ./config/webpack.common",
+    "analyze": "webpack --config ./config/webpack.analyze",
     "db": "json-server db.json --watch"
   },
   "keywords": [],
@@ -24,18 +24,16 @@
     "babel-plugin-emotion": "^10.0.29",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-emotion": "^10.0.27",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^5.1.0",
-    "filemanager-webpack-plugin": "^2.0.5",
     "fork-ts-checker-webpack-plugin": "^4.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "html-webpack-tags-plugin": "^2.0.17",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "redux-devtools-extension": "^2.13.8",
@@ -53,13 +51,14 @@
   "dependencies": {
     "@babel/runtime": "^7.8.7",
     "@babel/runtime-corejs3": "^7.8.7",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
     "dayjs": "^1.8.22",
-    "emotion": "^10.0.27",
     "immer": "^6.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
