--- a/package.json
+++ b/package.json
@@ -1,70 +1,70 @@
 {
-  "name": "ts-react-01",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack-dev-server --config ./config/webpack.dev",
-    "build": "webpack --config ./config/webpack.prod",
-    "analyze": "webpack --config ./config/webpack.analyze",
-    "db": "json-server db.json --watch"
-  },
-  "keywords": [],
-  "author": "keen",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.29",
-    "case-sensitive-paths-webpack-plugin": "^2.3.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-emotion": "^10.0.27",
-    "eslint-plugin-react": "^7.19.0",
-    "file-loader": "^5.1.0",
-    "fork-ts-checker-webpack-plugin": "^4.1.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
-    "redux-devtools-extension": "^2.13.8",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.42.0",
-    "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.8.7",
-    "@babel/runtime-corejs3": "^7.8.7",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
-    "axios": "^0.19.2",
-    "dayjs": "^1.8.22",
-    "immer": "^6.0.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
-  }
+	"name": "ts-react-01",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "webpack-dev-server --config ./config/webpack.dev",
+		"build": "webpack --config ./config/webpack.prod",
+		"analyze": "webpack --config ./config/webpack.analyze",
+		"db": "npx json-server ./src/lib/mock/db.json --watch"
+	},
+	"keywords": [],
+	"author": "keen",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/core": "^7.8.7",
+		"@babel/plugin-transform-runtime": "^7.8.3",
+		"@babel/preset-env": "^7.8.7",
+		"@babel/preset-react": "^7.8.3",
+		"@babel/preset-typescript": "^7.8.3",
+		"@typescript-eslint/eslint-plugin": "^2.23.0",
+		"@typescript-eslint/parser": "^2.23.0",
+		"babel-loader": "^8.0.6",
+		"babel-plugin-emotion": "^10.0.29",
+		"case-sensitive-paths-webpack-plugin": "^2.3.0",
+		"clean-webpack-plugin": "^3.0.0",
+		"css-loader": "^3.4.2",
+		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^6.10.0",
+		"eslint-loader": "^3.0.3",
+		"eslint-plugin-emotion": "^10.0.27",
+		"eslint-plugin-react": "^7.19.0",
+		"file-loader": "^5.1.0",
+		"fork-ts-checker-webpack-plugin": "^4.1.0",
+		"html-loader": "^0.5.5",
+		"html-webpack-plugin": "^3.2.0",
+		"mini-css-extract-plugin": "^0.9.0",
+		"node-sass": "^4.13.1",
+		"redux-devtools-extension": "^2.13.8",
+		"sass-loader": "^8.0.2",
+		"style-loader": "^1.1.3",
+		"ts-loader": "^6.2.1",
+		"typescript": "^3.8.3",
+		"url-loader": "^3.0.0",
+		"webpack": "^4.42.0",
+		"webpack-bundle-analyzer": "^3.6.1",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3",
+		"webpack-merge": "^4.2.2"
+	},
+	"dependencies": {
+		"@babel/runtime": "^7.8.7",
+		"@babel/runtime-corejs3": "^7.8.7",
+		"@emotion/core": "^10.0.28",
+		"@emotion/styled": "^10.0.27",
+		"@types/react": "^16.9.23",
+		"@types/react-dom": "^16.9.5",
+		"@types/react-redux": "^7.1.7",
+		"@types/react-router-dom": "^5.1.3",
+		"axios": "^0.19.2",
+		"dayjs": "^1.8.22",
+		"immer": "^6.0.1",
+		"react": "^16.13.0",
+		"react-dom": "^16.13.0",
+		"react-redux": "^7.2.0",
+		"react-router-dom": "^5.1.2",
+		"redux": "^4.0.5",
+		"redux-saga": "^1.1.3"
+	}
 }
