--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,10 +34,9 @@
     "node_modules",
     "build",
     "scripts",
-    "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "enzyme"
   ],
   "include": [
     "src"
