--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "webpack --config ./config/webpack.prod",
 		"analyze": "webpack --config ./config/webpack.analyze",
 		"db": "npx json-server ./src/lib/mock/db.json --watch",
-		"test": "jest --coverage --verbose"
+		"test": "jest --verbose",
+		"test:watch": "jest --watch"
 	},
 	"keywords": [],
 	"author": "keen",
@@ -19,13 +20,20 @@
 		"@babel/preset-env": "^7.8.7",
 		"@babel/preset-react": "^7.8.3",
 		"@babel/preset-typescript": "^7.8.3",
+		"@types/enzyme": "^3.10.5",
+		"@types/jest": "^25.1.4",
+		"@types/react-test-renderer": "^16.9.2",
 		"@typescript-eslint/eslint-plugin": "^2.23.0",
 		"@typescript-eslint/parser": "^2.23.0",
+		"babel-jest": "^25.1.0",
 		"babel-loader": "^8.0.6",
 		"babel-plugin-emotion": "^10.0.29",
 		"case-sensitive-paths-webpack-plugin": "^2.3.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.4.2",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.2",
+		"enzyme-to-json": "^3.4.4",
 		"eslint": "^6.8.0",
 		"eslint-config-prettier": "^6.10.0",
 		"eslint-loader": "^3.0.3",
@@ -35,11 +43,14 @@
 		"fork-ts-checker-webpack-plugin": "^4.1.0",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
+		"jest": "^25.1.0",
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.13.1",
+		"react-test-renderer": "^16.13.0",
 		"redux-devtools-extension": "^2.13.8",
 		"sass-loader": "^8.0.2",
 		"style-loader": "^1.1.3",
+		"ts-jest": "^25.2.1",
 		"ts-loader": "^6.2.1",
 		"typescript": "^3.8.3",
 		"url-loader": "^3.0.0",
